# eye-protection

./: .gitignore  README.md  package-lock.json  package.json  settings.json
.github/workflows/: main.yml
src-tauri/: Cargo.toml  settings.json  tauri.conf.json
src-tauri/src/: main.rs
ui/: about.html  about.js  i18n.js  reminder.html  reminder.js  settings.html  settings.js
ui/i18n/: en.json  zh-CN.json
